# mviewer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  extract_model.py  extract_mview.py  notes.txt
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  site.css
docs/reverse-engineering/: README.md  marmoset-d3f745560e47d383adc4f6a322092030.js  marmoset-js-spec.md
noesis/: ReadMe.txt
noesis/plugins/python/: __NPExample.txt  __NPReadMe.txt  data_quake2.py  fmt_artstation_mview.py  fmt_bulletwitch_cpr.py  fmt_desertstrike_dsg.py  fmt_duke3d_grp_art.py  fmt_gamebryo_nif.py  fmt_pvrtc_pvr.py  fmt_quake2_bsp.py  fmt_quake2_wal.py  fmt_sof1pc_m32.py  fmt_uoclassic.py  fmt_ys_aia.py  inc_adpcm.py  inc_noesis.py  noewin.py  tool_windowtest.txt
noesis/scenes/: march.noevmarch  physics.noesis  sample.noesis  sample_elf01ff11.noesis  sample_hume01.ff11datset
noesis/scenes/dicom/: set01.dcmvolset  set01.noevmarch
packaging/linux/: mviewer-gui.desktop  mviewer.desktop
src/: animation.rs  archive.rs  js_export.rs  lib.rs  main.rs  mesh.rs  obj.rs  runtime.rs  scene.rs  viewer.rs
src/gltf/: animated.rs  mod.rs  textures.rs
src/gui/: app.css  app.rs  icon.rs  marmoset-fork.js  mod.rs  viewer.rs
test_data/: test_file2.mview  test_file27.mview
windows/: extract.bat  readme.md
