[package]
name = "mviewer"
version = "2.0.0"
edition = "2024"
default-run = "mviewer-gui"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.31", default-features = true, features = ["wgpu"] }
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
myth-gltf-json = { version = "1.4.2", features = ["names", "KHR_lights_punctual"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = true, features = ["png", "webp"] }
winresource = "0.1"
