[package]
name = "mviewer"
version = "2.0.0"
edition = "2024"
default-run = "mviewer-gui"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
http = "1.4"
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
myth-gltf-json = { version = "1.4.2", features = ["names", "KHR_lights_punctual"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.35.0"
tiny_http = "0.12"
wry = "0.55.0"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = true, features = ["png", "webp"] }
winresource = "0.1"
